# scalable-p2-scalable-t3-chocolate-charger

./: .gitignore  .sample.mp4.icloud  README.md  dockerfile  dockerfile-worker  dockerfilecomposeworker  dockerfilecontroller  dockerfileeieiei  dockerfileextractworker  dockerfilefrontend  dockerfilescript  dockerfileupdater  dockerfileworker  script.py  script.sh
.github/workflows/: backend-build-bananabood.yaml  backend-build-bananabood.yml  backend-build-peeleep.yml  backend-build.yaml  backend-build.yml  frontend-build-bananaBood.yml  frontend-build-peeleep.yml  (+12 more)
frontend/: package-lock.json  package.json
frontend-react/: package-lock.json  package.json
k8s/: backend-deployment.yaml  controller-deployment.yaml  controller-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ghcr-secrets.yaml  ingress.yaml  minio-configMap.yaml  minio-deployment.yaml  minio-service.yaml  minio-standalone-pvc.yaml  redis-deployment.yaml  redis-service.yaml  rq-worker-compose-deployment.yaml  rq-worker-extraction-deployment.yaml  rq-worker-log-deployment.yaml
playground/: test_script.py
webcontroller/: app 2.py  app.py  compose.py  dockerfile  extract.py  extract.sh  features 2.py  features.py  logs.py  minioController.py  pyproject.toml  redisConnection.py  requirements.txt
webcontroller/app/: app.py  make_gif.sh  pyproject 2.toml
webcontroller/scripts/: compose.sh  extract.sh
webcontroller/workers/: extract.py  pyproject.toml
work_queue/workers/: app 2.py  pyproject.toml
workers/: extract.py  feature.py  minioController.py  redisConnection.py
(+20 files in other folders)
