[tool.poetry]
name = "webcontroller"
version = "0.1.0"
description = ""
authors = ["Philippe Sagon <Philipee.sagon44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-Caching = "^1.11.1"
minio = "^7.1.8"
Flask-Minio = "^0.1.2"
requests = "^2.27.1"
redis = "^4.3.3"
gunicorn = "^20.1.0"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
