[tool.poetry]
name = "queue_wrapper"
version = "0.1.0"
description = ""
authors = ["Philippe Sagon <Philipee.sagon44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
redis = "^4.3.3"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
